Revert "Test textile"
This reverts commit 49b68aae9eaa2d572ec5bfbd27b95a0daae41dd6.

--- a/_posts/2016-05-10-textile-syntax.textile
+++ b/_posts/2016-05-10-textile-syntax.textile
@@ -1,8 +1,8 @@
 h1. level 1 heading
 
-h2. level 2 heading
+h2=. level 2 heading
 
-h3. level 3 heading
+h3>. level 3 heading
 
 h4<{color:red}. level 4 heading
 
