--- a/_posts/2016-05-11-to-be-a-proactive-and-productive-developer.textile
+++ b/_posts/2016-05-11-to-be-a-proactive-and-productive-developer.textile
@@ -1,9 +1,14 @@
 ---
 layout: post
 title:  "To Be a Proactive and Productive Developer"
-date:   2016-05-11
+date:   2016-05-10
 categories: developer
 ---
+
+h1. To be a Productive and Proactive Developer
+
+h4. Robbie Cao
+h4. Mar 16, 2016
 
 h2. Communication
 
